--- a/highscore.css
+++ b/highscore.css
@@ -7,7 +7,7 @@
 }
 
 #hightable td,#myhightable td{
-    border: 1px black solid;
+    border-top: 1px black solid;
 }
 
 #highlogo{
@@ -18,7 +18,7 @@
 }
 
 #highdiv{
-    background-color: #1a6ecc;
+    background-color: rgba(77, 79, 81, 0.8);
     width:50%;
     margin:auto;
     border-radius: 16px;
