--- a/main.css
+++ b/main.css
@@ -21,4 +21,8 @@ header {
   text-align: center;
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px yellow, 0 0 5px gold;
+  background-color: rgba(255,255,255,0.4);
+  border-radius: 5px;
+  padding: 3px;
+  margin: 0;
 }
