--- a/main.css
+++ b/main.css
@@ -11,10 +11,9 @@ body {
 #game_canvas {
   display: block;
   border: 4px solid rgb(77,79,81);
-  right: auto;
   left: auto;
   padding: 0px;
-  margin: 10px auto;  
+  margin: 10px auto 10px auto;  
 }
 
 header {
@@ -25,4 +24,11 @@ header {
   border-radius: 5px;
   padding: 3px;
   margin: 0;
+}
+
+div#gameInfo {
+    
+}
+
+div#canvasContainer {
 }
