--- a/main.css
+++ b/main.css
@@ -34,37 +34,51 @@ div#gameInfo {
 }
 
 .btn-group .button {
-    border: 2px solid black;
-    color: black;
-    width: 50%;
-    padding: 10px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    float: left;
-    margin: 5px;
+  border: 2px solid black;
+  color: black;
+  width: 50%;
+  padding: 10px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  float: left;
+  margin: 5px;
 }
 
-p[data-color="green"] {
-    background-color: green;
+.btn-group .towerButton {
+  opacity: 0.5;
 }
 
-p[data-color="yellow"] {
-    background-color: yellow;
+.btn-group .towerButton:hover {
+  opacity: 1.0;
 }
 
-p[data-color="red"] {
-    background-color: red;
+.button[data-color="green"] {
+  background-color: green;
 }
+
+.button[data-color="yellow"] {
+  background-color: yellow;
 }
-.btn-group .button:hover {
-    background-color: slategrey;
+
+.button[data-color="red"] {
+  background-color: red;
+}
+
+.btn-group .button.selectedTower {
+  opacity: 1;
 }
 
 div#gameInfo {
   text-align: center;
+}
+
+div#gameInfo div {
+  text-align: center;
+  margin: 5px;
+  padding 0;
 }
 
 div#towerSelection {
