--- a/main.css
+++ b/main.css
@@ -18,6 +18,8 @@ body {
 
 header {
   text-align: center;
+  position: static;
+  vertical-align: middle;
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px yellow, 0 0 5px gold;
   background-color: rgba(255,255,255,0.4);
@@ -83,4 +85,22 @@ div#gameInfo div {
 
 div#towerSelection {
   text-align: center;
+}
+
+header img.right {
+  position: absolute;
+  padding: 0;
+  right: 20px;
+  top: 0;
+}
+
+header img.left {
+  position: absolute;
+  padding: 0;
+  left: 20px;
+  top: 0;
+}
+
+header h1 {
+  display: inline;
 }
